apps/readeck/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readeck
  namespace: readeck
  labels:
    app: readeck
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
    - name: metrics
      port: 8002
      targetPort: 8002
  selector:
    app: readeck
